change title HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>JS</title>
+		<title>Best sneakers shop ever OMG</title>
 	</head>
 	<body>
 		<script src="main.js"></script>
