--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Best sneakers shop ever OMG</title>
 	</head>
 	<body>
+		<div class="header">
+			<div class="wrapper">
+				<img src="image/logo.png" alt="Logo">
+				<ul>
+					<li><a href="">Women</a></li>
+					<li><a href="">Originals</a></li>
+					<li><a href="">Shoes</a></li>
+					<li><a href="">(373 products)</a></li>
+				</ul>
+			</div>
+		</div>
+		<div id="conteiner">
+			<div id="content">Conten</div>
+			<div id="navbar">Menu</div>
+		</div>	
 		<script src="main.js"></script>
 	</body>
 </html>
