--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Best sneakers shop ever OMG</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div class="header">
