--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Best sneakers shop ever OMG</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/test.css">
 	</head>
 	<body>
 		<div class="header">
 			<div class="wrapper">
-				<img src="image/logo.png" alt="Logo">
-				<ul>
-					<li><a href="">Women</a></li>
-					<li><a href="">Originals</a></li>
-					<li><a href="">Shoes</a></li>
-					<li><a href="">(373 products)</a></li>
-				</ul>
+				<img src="image/logo2.png" alt="Logo">
+				
 			</div>
 		</div>
 		<div id="conteiner">
-			<div id="content">Conten</div>
+			<ul>
+				<li><a href="">Women</a></li>
+				<li><a href="">Originals</a></li>
+				<li><a href="">Shoes</a></li>
+				<li><a href="">(373 products)</a></li>
+			</ul>
+			<div id="content">Content</div>
 			<div id="navbar">Menu</div>
 		</div>	
 		<script src="main.js"></script>
