--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 			</div>
 		</div>
 		<div id="conteiner">
-			<ul>
+			<ul class="flex-container nowrap">
+				<li class="flex-item">Women</li>
+				<li class="flex-item">Originals</li>
+				<li class="flex-item">Shoes</li>
+				<li class="flex-item">(373 products)</li>
+			  </ul>
+			<!-- <ul>
 				<li><a href="">Women</a></li>
 				<li><a href="">Originals</a></li>
 				<li><a href="">Shoes</a></li>
 				<li><a href="">(373 products)</a></li>
-			</ul>
+			</ul> -->
 			<div id="content">Content</div>
 			<div id="navbar">Menu</div>
 		</div>	
