--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 		<link rel="stylesheet" href="css/test.css">
 	</head>
 	<body>
-		<div class="header">
+		<div class="main_flex-container">
+			<div class="logo-header">
+				<img src="image/logo2.png" alt="Logo">
+			</div>
+			<h1>
+				<div>Белая блять полоса</div>
+			</h1>
+			<ul class="white-line"></ul>
+			<ul class="guide-flex"></ul>
+			<ul class="main content conteiner-flex"></ul>
+		</div>
+		<!-- <div class="header">
 			<div class="wrapper">
 				<img src="image/logo2.png" alt="Logo">
 				
@@ -25,9 +36,9 @@
 				<li><a href="">Shoes</a></li>
 				<li><a href="">(373 products)</a></li>
 			</ul> -->
-			<div id="content">Content</div>
+			<!-- <div id="content">Content</div>
 			<div id="navbar">Menu</div>
 		</div>	
-		<script src="main.js"></script>
+		<script src="main.js"></script> -->
 	</body>
 </html>
