--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 	<body>
 		<div class="main_flex-container">
 			<div class="logo-header">
-				<img src="image/logo2.png" alt="Logo">
+				<img class="logo_image" src="image/logo2.png" alt="Logo">
 			</div>
-			<h1>
-				<div>Белая блять полоса</div>
-			</h1>
-			<ul class="white-line"></ul>
-			<ul class="guide-flex"></ul>
+			<div class="white-line">
+			</div>
+			<ul class="guide-flex">
+				<li class="flex-item">Women</li>
+				<li class="flex-item">Originals</li>
+				<li class="flex-item">Shoes</li>
+				<li class="flex-item">(373 products)</li>
+			</ul>
 			<ul class="main content conteiner-flex"></ul>
 		</div>
 		<!-- <div class="header">
