--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
 		<link rel="stylesheet" href="css/test.css">
 	</head>
 	<body>
-		<div class="main_flex-container">
+		<div class="main-flex-container">
 			<div class="logo-header">
 				<img class="logo_image" src="image/logo2.png" alt="Logo">
 			</div>
-			<div class="white-line">
-			</div>
-			<ul class="guide-flex">
-				<li class="flex-item">Women</li>
-				<li class="flex-item">Originals</li>
-				<li class="flex-item">Shoes</li>
-				<li class="flex-item">(373 products)</li>
-			</ul>
+			<div class="white-line"></div>
+			<nav>
+				<ul class="guide">
+					<li><a href="#"></a>Women</li>
+					<li><a href="#"></a>Originals</li>
+					<li><a href="#"></a>Shoes</li>
+					<li><a href="#"></a>(373 products)</li>
+				</ul>
+			</nav>
+			
 			<ul class="main content conteiner-flex"></ul>
 		</div>
 		<!-- <div class="header">
@@ -33,7 +35,7 @@
 				<li class="flex-item">Shoes</li>
 				<li class="flex-item">(373 products)</li>
 			  </ul>
-			<!-- <ul>
+			 <ul>
 				<li><a href="">Women</a></li>
 				<li><a href="">Originals</a></li>
 				<li><a href="">Shoes</a></li>
