--- a/index.html
+++ b/index.html
@@ -6,44 +6,36 @@
 		<link rel="stylesheet" href="css/test.css">
 	</head>
 	<body>
-		<div class="main-flex-container">
+		<div class="main-container">
 			<div class="logo-header">
 				<img class="logo_image" src="image/logo2.png" alt="Logo">
 			</div>
 			<div class="white-line"></div>
-			<nav>
+			<div>
 				<ul class="guide">
 					<li><a href="#"></a>Women</li>
 					<li><a href="#"></a>Originals</li>
 					<li><a href="#"></a>Shoes</li>
 					<li><a href="#"></a>(373 products)</li>
 				</ul>
-			</nav>
+			</div>
+			<div>
+				<div class="menu-content-container">
+					<div class="menu">
+						<div>Menu1</div>
+						<div>Menu2</div>
+						<div>Menu3</div>
+						<div>Menu4</div>
+					</div>
+					<div class="content">
+						<div>Content1</div>
+						<div>Content2</div>
+						<div>Content3</div>
+					</div>
+
+				</div>
 			
-			<ul class="main content conteiner-flex"></ul>
-		</div>
-		<!-- <div class="header">
-			<div class="wrapper">
-				<img src="image/logo2.png" alt="Logo">
-				
 			</div>
 		</div>
-		<div id="conteiner">
-			<ul class="flex-container nowrap">
-				<li class="flex-item">Women</li>
-				<li class="flex-item">Originals</li>
-				<li class="flex-item">Shoes</li>
-				<li class="flex-item">(373 products)</li>
-			  </ul>
-			 <ul>
-				<li><a href="">Women</a></li>
-				<li><a href="">Originals</a></li>
-				<li><a href="">Shoes</a></li>
-				<li><a href="">(373 products)</a></li>
-			</ul> -->
-			<!-- <div id="content">Content</div>
-			<div id="navbar">Menu</div>
-		</div>	
-		<script src="main.js"></script> -->
 	</body>
 </html>
