--- a/index.html
+++ b/index.html
@@ -19,62 +19,30 @@
 			</ul>
 			<div class="menu-content-container">
 				<div class="menu">
-					<div>Menu1</div>
+					<div>Menu1ффффффффффффффффффффффффффффффффффффффффффффффф</div>
 					<div>Menu2</div>
 					<div>Menu3</div>
 					<div>Menu4</div>
 					<div>Menu4</div>
 					<div>Menu4</div>
-					<!-- <div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu1</div>
-					<div>Menu2</div>
-					<div>Menu3</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu1</div>
-					<div>Menu2</div>
-					<div>Menu3</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div> -->
 				</div>
 				<div class="content">
-					<div>Content1</div>
-					<div>Content2</div>
-					<div>Content3</div>
+					<div class="card-item">Content1
+						<div class="item-img"></div>
+						<span class="dicrp"></span>
+						<button class="price"></button>
+					</div>
+					<div class="card-item">Content2</div>
+					<div class="card-item">Content3</div>
+					<div class="card-item">Content4</div>
+					<div class="card-item">Content5</div>
+					<div class="card-item">Content6</div>
+					<div class="card-item">Content7</div>
+					<div class="card-item">Content8</div>
+					<div class="card-item">Content9</div>
+					<div class="card-item">Content10</div>
+					<div class="card-item">Content11</div>
+					<div class="card-item">Content12</div>
 				</div>
 			</div>
 		</div>
