--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</ul>
 			<div class="menu-content-container">
 				<div class="menu">
-					<div>Menu1ффффффффффффффффффффффффффффффффффффффффффффффф</div>
+					<div>Menu1</div>
 					<div>Menu2</div>
 					<div>Menu3</div>
 					<div>Menu4</div>
@@ -27,8 +27,8 @@
 					<div>Menu4</div>
 				</div>
 				<div class="content">
-					<div class="card-item">Content1
-						<div class="item-img"></div>
+					<div class="card-item">
+						<img class="item-img" src="https://assets.adidas.com/images/w_385,h_385,f_auto,q_auto:sensitive,fl_lossy/809331bcaf52460facb3ab3b011623ef_9366/krossovki-deerupt-runner.jpg" alt="krossovki-deerupt-runner">
 						<span class="dicrp"></span>
 						<button class="price"></button>
 					</div>
