button+discr+price

--- a/index.html
+++ b/index.html
@@ -1,50 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Best sneakers shop ever OMG</title>
-		<link rel="stylesheet" href="css/test.css">
-	</head>
-	<body>
-		<div class="main-container">
-			<div class="logo-header">
-				<img class="logo_image" src="image/logo2.png" alt="Logo">
+
+<head>
+	<meta charset="utf-8">
+	<title>Best sneakers shop ever OMG</title>
+	<link rel="stylesheet" href="css/test.css">
+</head>
+
+<body>
+	<div class="main-container">
+		<div class="logo-header">
+			<img class="logo_image" src="image/logo2.png" alt="Logo">
+		</div>
+		<div class="white-line"></div>
+		<div class="inner"></div>
+		<ul class="guide">
+			<li><a href="#"></a>Women</li>
+			<li><a href="#"></a>Originals</li>
+			<li><a href="#"></a>Shoes</li>
+			<li><a href="#"></a>(373 products)</li>
+		</ul>
+		<div class="menu-content-container">
+			<div class="menu">
+				<div>Menu1</div>
+				<div>Menu2</div>
+				<div>Menu3</div>
+				<div>Menu4</div>
+				<div>Menu4</div>
+				<div>Menu4</div>
 			</div>
-			<div class="white-line"></div>
-			<ul class="guide">
-				<li><a href="#"></a>Women</li>
-				<li><a href="#"></a>Originals</li>
-				<li><a href="#"></a>Shoes</li>
-				<li><a href="#"></a>(373 products)</li>
-			</ul>
-			<div class="menu-content-container">
-				<div class="menu">
-					<div>Menu1</div>
-					<div>Menu2</div>
-					<div>Menu3</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
-					<div>Menu4</div>
+			<div class="content">
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
 				</div>
-				<div class="content">
-					<div class="card-item">
-						<img class="item-img" src="https://assets.adidas.com/images/w_385,h_385,f_auto,q_auto:sensitive,fl_lossy/809331bcaf52460facb3ab3b011623ef_9366/krossovki-deerupt-runner.jpg" alt="krossovki-deerupt-runner">
-						<span class="dicrp"></span>
-						<button class="price"></button>
-					</div>
-					<div class="card-item">Content2</div>
-					<div class="card-item">Content3</div>
-					<div class="card-item">Content4</div>
-					<div class="card-item">Content5</div>
-					<div class="card-item">Content6</div>
-					<div class="card-item">Content7</div>
-					<div class="card-item">Content8</div>
-					<div class="card-item">Content9</div>
-					<div class="card-item">Content10</div>
-					<div class="card-item">Content11</div>
-					<div class="card-item">Content12</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item"><img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button></div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item"><img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button></div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-gen">Пол</span>
+					<span class="item-discr">Название</span>
+					<button class="item-price">Цена</button>
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
