edited style for item-card

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<meta charset="utf-8">
 	<title>Best sneakers shop ever OMG</title>
 	<link rel="stylesheet" href="css/test.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
 	<div class="main-container">
 		<div class="logo-header">
-			<img class="logo_image" src="image/logo2.png" alt="Logo">
+			<img class="logo-image" src="image/logo2.png" alt="Logo">
 		</div>
 		<div class="white-line"></div>
 		<div class="inner"></div>
@@ -32,71 +34,75 @@
 			<div class="content">
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
-				</div>
-				<div class="card-item"><img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button></div>
-				<div class="card-item">
-					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
-				</div>
-				<div class="card-item"><img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button></div>
-				<div class="card-item">
-					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-gen">Пол</span>
-					<span class="item-discr">Название</span>
-					<button class="item-price">Цена</button>
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
+				</div>
+				<div class="card-item">
+					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
+					<span class="item-name">superstar</span>
+					<span class="item-gen">men's</span>
+					<span class="item-price">150$</span>
 				</div>
 			</div>
 		</div>
