padding for discr

--- a/index.html
+++ b/index.html
@@ -34,76 +34,100 @@
 			<div class="content">
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
 				</div>
 				<div class="card-item">
 					<img class="item-img" src="image/superstar.jpg" alt="krossovki-deerupt-runner">
-					<span class="item-name">superstar</span>
-					<span class="item-gen">men's</span>
-					<span class="item-price">150$</span>
-				</div>
+					<div class="item-disrp">
+						<span class="item-name">superstar</span>
+						<span class="item-gen">men's</span>
+						<span class="item-price">150$</span>
+					</div>
+				</div>	
 			</div>
 		</div>
 	</div>
