--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
 		</ul>
 		<div class="menu-content-container">
 			<div class="menu">
+				<!-- <div class="radio">
+					<input id="male" type="radio" name="gender" value="male">
+					<label for="male">Male</label>
+					<input id="female" type="radio" name="gender" value="female">
+					<label for="female">Female</label>
+				</div> -->
+				<h3>gender</h3>
+				<div class="checkbox">
+					<input id="check1" type="checkbox" name="men" value="men">
+					<label for="check1">men</label>
+					<br>
+					<input id="check2" type="checkbox" name="women" value="women">
+					<label for="check2">women</label>
+				</div>
+
 				<div>Menu1</div>
 				<div>Menu2</div>
 				<div>Menu3</div>
@@ -127,7 +142,7 @@
 						<span class="item-gen">men's</span>
 						<span class="item-price">150$</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 		</div>
 	</div>
